[tool.poetry]
name = "feature-service"
version = "0.1.0"
description = "demo"
authors = ["nsnguyen <nsnguyen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
