[tool.poetry]
name = "feature-service"
version = "0.1.0"
description = "demo"
authors = ["nsnguyen <nsnguyen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
xxhash = "^3.2.0"
pydantic = "^2.0.3"
redis = "^4.6.0"
zstd = "^1.5.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
